libs/common-lib/src/main/java/com/example/common/error/validation/package-info.java
@NullMarked
package com.example.common.error.validation;

import org.jspecify.annotations.NullMarked;
